Bug 1186661 - Use monitors-changed signal to update screen manager on GTK. r=karlt